<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.FilterFragment">

    <ImageView
        android:id="@+id/displayImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/controlButtons"
        android:contentDescription="@string/display_current_image" />

    <LinearLayout
        android:id="@+id/controlButtons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/displayImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="16dp"
        android:layout_margin="8dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/backButton"
            android:src="@drawable/ic_left_arrow"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/navigate_previous_screen" />

        <ImageView
            android:id="@+id/undoButton"
            android:src="@drawable/ic_undo"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/undo_current_action" />

        <ImageView
            android:id="@+id/contrastButton"
            android:src="@drawable/ic_tune"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/change_contrast" />

        <ImageView
            android:id="@+id/saveButton"
            android:src="@drawable/ic_save"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/save_image_changes" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>