<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.PageFragment">

    <LinearLayout
        android:id="@+id/toolbar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/displayImage">
        <ImageView
            android:id="@+id/toolbar_backButton"
            android:src="@drawable/ic_left_arrow"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/navigate_previous_screen" />

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_height="match_parent"/>
        <ImageView
            android:id="@+id/toolbar_editButton"
            android:src="@drawable/ic_edit"
            android:layout_gravity="center_vertical"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/edit_title_of_the_page" />
    </LinearLayout>

    <ImageView
        android:id="@+id/displayImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/controlButtons"
        android:contentDescription="@string/display_current_image" />

    <LinearLayout
        android:id="@+id/controlButtons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/displayImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="16dp"
        android:layout_margin="8dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/rotateLeftButton"
            android:src="@drawable/ic_rotate_left"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/rotate_page_left" />

        <ImageView
            android:id="@+id/rotateRightButton"
            android:src="@drawable/ic_rotate_right"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/rotate_page_right" />

        <ImageView
            android:id="@+id/editButton"
            android:src="@drawable/ic_crop"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/edit_page" />

        <ImageView
            android:id="@+id/shareButton"
            android:src="@drawable/ic_share"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/share_page" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>